# Indi-Romi-Jones

./: README.md  frames.gv
devel/: .catkin  .rosinstall
devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
devel/lib/pkgconfig/: exploration.pc  gmapping.pc  mapping.pc  path_planning.pc  romi_robots.pc
devel/share/exploration/cmake/: explorationConfig.cmake
devel/share/gmapping/cmake/: gmappingConfig.cmake
devel/share/mapping/cmake/: mappingConfig.cmake
devel/share/path_planning/cmake/: path_planningConfig.cmake
devel/share/romi_robots/cmake/: romi_robotsConfig.cmake
docs/: index.html
software/: .gitignore  CMakeLists.txt  README.md  main.c
software/libraries/kobuki/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  kobuki.c  kobuki.h  kobukiActuator.c  kobukiSensor.c  kobukiSensorPoll.c  kobukiSensorTypes.h  kobukiUART.c  kobukiUART.h  kobukiUtilities.c  kobukiUtilities.h
src/buckler/: .gitmodules
src/exploration/: CMakeLists.txt
src/exploration/launch/: explore_params.launch
src/exploration/src/: path.py  path_planner.py
src/mapping/: package.xml
src/mapping/launch/: demo.launch  my_config.rviz
src/mapping/src/: mapping_node.py  occupancy_grid_2d.py
src/romi_robots/: CMakeLists.txt  package.xml
src/romi_robots/launch/: romi_params.launch
src/romi_robots/src/: graph.py  indi_romi.py  romi.py  romi_state.py
